# point_net

./: .gitignore  4376899.stdout  4376995.stdout  data.py  flat_eye.py  loss.py  pyproject.toml  slurm.sh  train.py
