[tool.poetry]
name = "point_net"
version = "0.1.0"
description = "Implementation of PointNet classification algorithm for ModelNet40 dataset."
authors = ["AW14Saurabh <aw14saurabh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
